[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pkexplode"
authors = [{name = "KOLANICH"}]
description = "Python bindings to libexplode which is a ripped out part of pkglib which is a Free Open-Source implementation of PKWare Data Compression Library (DCL) compression format, which itself was ripped out of StormLib by Ladislav Zezula."
readme = "ReadMe.md"
keywords = ["blast", "PKWare", "bindings", "compression", "DCL", "implode"]
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = ["pklib_base"] # @ git+https://github.com/implode-compression-impls/pklib_base.py.git
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/implode-compression-impls/pkexplode.py"

[project.optional-dependencies]
test = ["fileTestSuite @ git+https://github.com/fileTestSuite/fileTestSuite.py"]

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
